JumpScript/tests/baselines/reference/declarationEmitDefaultExport7.errors.txt
tests/cases/compiler/declarationEmitDefaultExport7.jump(2,1): error TS4082: Default export of the module has or is using private name 'A'.


==== tests/cases/compiler/declarationEmitDefaultExport7.jump (1 errors) ====
    class A {}
    export default new A();
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4082: Default export of the module has or is using private name 'A'.
    